--- a/SOC/SOC.csproj
+++ b/SOC/SOC.csproj
@@ -71,11 +71,13 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CityHash">
-      <HintPath>..\..\..\..\OneDrive\Desktop\CityHash.dll</HintPath>
+    <Reference Include="CityHash, Version=0.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\CityHash.dll</HintPath>
     </Reference>
-    <Reference Include="FoxLib">
-      <HintPath>..\..\..\..\Downloads\FoxLib.dll</HintPath>
+    <Reference Include="FoxLib, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\FoxLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
