Add LuaTypes to represent lua as xml

--- a/SOC/SOC.csproj
+++ b/SOC/SOC.csproj
@@ -128,14 +128,23 @@
     <Compile Include="Core\Classes\Fox2\EntityClasses\Transform.cs" />
     <Compile Include="Core\Classes\Fox2\Fox2EntityClass.cs" />
     <Compile Include="Core\Classes\InfiniteHeaven\Position.cs" />
+    <Compile Include="Core\Classes\Lua\LuaBoolean.cs" />
+    <Compile Include="Core\Classes\Lua\LuaNil.cs" />
+    <Compile Include="Core\Classes\Lua\LuaNumber.cs" />
+    <Compile Include="Core\Classes\Lua\LuaTable.cs" />
+    <Compile Include="Core\Classes\Lua\LuaText.cs" />
+    <Compile Include="Core\Classes\Lua\LuaMultiAssignment.cs" />
+    <Compile Include="Core\Classes\Lua\LuaValueList.cs" />
     <Compile Include="Core\Classes\Lua\DefinitionLua.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\AuxiliaryCode.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\CheckQuestAllTargetDynamic.cs" />
-    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\Common\CheckQuestAnimal.cs" />
-    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\Common\CheckQuestGenericEnemy.cs" />
-    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\Common\CheckQuestItem.cs" />
-    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\Common\QStep_MainCommonMessages.cs" />
-    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\LuaFunction.cs" />
+    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\CheckQuestAnimal.cs" />
+    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\CheckQuestGenericEnemy.cs" />
+    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\CheckQuestItem.cs" />
+    <Compile Include="Core\Classes\Lua\LuaValue.cs" />
+    <Compile Include="Core\Classes\Lua\LuaVariable.cs" />
+    <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\QStep_MainCommonMessages.cs" />
+    <Compile Include="Core\Classes\Lua\LuaFunction.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\CheckQuestMethodsList.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\Messages.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\OpeningVariables.cs" />
