--- a/SOC/SOC.csproj
+++ b/SOC/SOC.csproj
@@ -129,6 +129,8 @@
     <Compile Include="Core\Classes\Fox2\Fox2EntityClass.cs" />
     <Compile Include="Core\Classes\InfiniteHeaven\Position.cs" />
     <Compile Include="Core\Classes\Lua\LuaBoolean.cs" />
+    <Compile Include="Core\Classes\Lua\LuaFile.cs" />
+    <Compile Include="Core\Classes\Lua\LuaFunction.cs" />
     <Compile Include="Core\Classes\Lua\LuaNil.cs" />
     <Compile Include="Core\Classes\Lua\LuaNumber.cs" />
     <Compile Include="Core\Classes\Lua\LuaTable.cs" />
@@ -144,7 +146,7 @@
     <Compile Include="Core\Classes\Lua\LuaValue.cs" />
     <Compile Include="Core\Classes\Lua\LuaVariable.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\QStep_MainCommonMessages.cs" />
-    <Compile Include="Core\Classes\Lua\LuaFunction.cs" />
+    <Compile Include="Core\Classes\Lua\LuaFunctionOldFormat.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\CheckQuestMethodsList.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\Messages.cs" />
     <Compile Include="Core\Classes\Lua\MainLuaComponents\Functions\OpeningVariables.cs" />
