Refactor templating logic into LuaTemplate class, refactor LuaFunction to allow for function param pre-templating

--- a/SOC/SOC.csproj
+++ b/SOC/SOC.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Core\Classes\Lua\LuaNil.cs" />
     <Compile Include="Core\Classes\Lua\LuaNumber.cs" />
     <Compile Include="Core\Classes\Lua\LuaTable.cs" />
+    <Compile Include="Core\Classes\Lua\LuaTemplate.cs" />
     <Compile Include="Core\Classes\Lua\LuaText.cs" />
     <Compile Include="Core\Classes\Lua\LuaMultiAssignment.cs" />
     <Compile Include="Core\Classes\Lua\LuaValueList.cs" />
