Reimplement StrCode32Table building for subscripting design structure

--- a/SOC/SOC.csproj
+++ b/SOC/SOC.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Core\Classes\Lua\LuaNumber.cs" />
     <Compile Include="Core\Classes\Lua\LuaTable.cs" />
     <Compile Include="Core\Classes\Lua\LuaTableIdentifier.cs" />
+    <Compile Include="Core\Classes\Lua\StrCode32Table.cs" />
     <Compile Include="Core\Classes\Lua\LuaTemplate.cs" />
     <Compile Include="Core\Classes\Lua\LuaText.cs" />
     <Compile Include="Core\Classes\QuestBuild\Builders\DefinitionScriptBuilder.cs" />
