--- a/SOC/SOC.csproj
+++ b/SOC/SOC.csproj
@@ -140,7 +140,7 @@
     <Compile Include="Core\Classes\Lua\LuaTableIdentifier.cs" />
     <Compile Include="Core\Classes\Lua\StrCode32Table.cs" />
     <Compile Include="Core\Classes\Lua\LuaTemplate.cs" />
-    <Compile Include="Core\Classes\Lua\LuaText.cs" />
+    <Compile Include="Core\Classes\Lua\LuaString.cs" />
     <Compile Include="Core\Classes\QuestBuild\Builders\DefinitionScriptBuilder.cs" />
     <Compile Include="Core\Classes\Lua\LuaValue.cs" />
     <Compile Include="Core\Classes\Lua\LuaVariable.cs" />
