clean up naming conventions and script function output

--- a/SOC/SOC.csproj
+++ b/SOC/SOC.csproj
@@ -499,6 +499,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Core\Forms\Pages\EmbeddedScriptSetControl.resx">
       <DependentUpon>EmbeddedScriptSetControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Core\Forms\Pages\LocationalDataStub.resx">
       <DependentUpon>LocationalDataStub.cs</DependentUpon>
